# ssanime-gui

./: .env.example  .gitattributes  .gitignore  .prettierignore  .prettierrc  .versionrc.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  Taskfile.yml  app.vue  build.ps1  check-ffmpeg.mjs  components.json  electron-builder.json5  electron-env.d.ts  eslint.config.js  go.mod  go.sum  magefile.go  nuxt.config.ts  package.json  pnpm-lock.yaml  release-please-config.json  sqlc.yaml  tailwind.config.js
.github/: dependabot.yml
.github/workflows/: ci.yml  release-please.yml  release.yml  retry-release.yml  test-build.yml  version-bump.yml
.husky/: commit-msg  pre-push
assets/css/: main.css
assets/scss/: main.scss  tailwind.scss
cmd/ssanime/: main.go  takeover.go  takeover_test.go
components/: CustomizeSite.vue  Footer.vue  Header.vue
components/encoding/: EncoderMain.vue  EncodingProfiles.vue  EncodingProgress.vue  EncodingQueue.vue  Main.vue  (+3 more)
composables/: capitalize.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src-tauri/ui-placeholder/: index.html
desktop/src-tauri/windows/: installer.nsi
docs/: app-self-update.md  distribution.md  git-hooks.md  gpu-mp4-encode-profiles.md  release-process.md  roadmap.md
electron/: main.ts  preload.ts
frontend/: index.html  package.json  tsconfig.app.json  vite.config.ts
layouts/: default.vue
pages/: index.vue
plugins/: theme.ts
scripts/: create-icns.js  create-ico.js  rasterize-logo.ts  release.bat  release.sh  retry-release-wrapper.cjs  retry-release.bat  retry-release.sh  version-bump.js
stores/: theme.ts
(+273 files in other folders)
