[package]
name = "ssanime-desktop"
version = "0.1.0"
description = "ssanime-gui desktop shell — launches the Go daemon and wraps it in a native window"
authors = ["modbender"]
license = "GPL-3.0"
repository = ""
edition = "2021"

[lib]
name = "ssanime_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
